# Tel2WhatSticker

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  PRD.md  README.md  RELEASE_NOTES_v2.0.0.md  build.gradle.kts  documentation.md  gap_prd.md  gradle.properties  local.properties  local.properties.example  plan.md  pubspec.yaml  settings.gradle.kts
.github/instructions/: rules.instructions.md
.github/workflows/: ci.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
app/: build.gradle.kts  proguard-rules.pro
app/config/: detekt.yml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  webp_native_bridge.cpp
assets/docs/: animated_pipe.md
docs/: index.html  legal.html  open-source-licenses.html  privacy-policy.html  terms-of-service.html
documentation/en/content/: Build and Deployment.md  Contributing and Development Guidelines.md  Data Models and Database Schema.md  Getting Started.md  Performance and Optimization.md  Security and Privacy.md  Testing Strategy.md  Troubleshooting and FAQ.md
documentation/en/content/API Reference/: API Reference.md  Conversion Engine APIs.md  Repository Interfaces.md  (+2 more)
documentation/en/meta/: repowiki-metadata.json
lib/: main.dart
lib/core/constants/: app_constants.dart
lib/core/di/: injection.dart  network_module.dart
lib/core/error/: exceptions.dart  failures.dart
lib/core/router/: app_router.dart
lib/core/theme/: app_colors.dart  app_icons.dart  app_text_styles.dart  app_theme.dart
lib/core/usecases/: usecase.dart
lib/features/splash/: README.md
(+167 files in other folders)
